// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`error-found has a cause 1`] = `

<div>
  <section class="flex min-h-[80svh] grow flex-col items-center justify-center bg-white dark:bg-black">
    <div class="relative -mt-32 flex flex-col items-center justify-center">
      <div class="relative flex flex-col gap-8">
        <div class="absolute inset-0 z-[2] bg-gradient-radial from-white/0 via-transparent to-white dark:from-black/0 dark:to-black">
        </div>
        <div class="flex gap-8 opacity-50">
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] rounded-sm border-[1px] border-neutral-400 bg-neutral-400/10 dark:border-neutral-800 dark:bg-neutral-800/10">
              <div class="flex w-1/4 flex-col justify-between border-r-[1px] border-neutral-700/50 bg-neutral-700/25 px-[3px] py-[3px]">
                <div>
                  <div class="h-[7px] w-full rounded-[2px] bg-neutral-700/50">
                  </div>
                  <div class="mt-1.5 flex items-center gap-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="h-[5px] w-2/3 rounded-[1px] bg-neutral-700/60">
                    </div>
                  </div>
                  <div class="mt-1 flex items-center gap-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="h-[5px] w-1/3 rounded-[1px] bg-neutral-700/60">
                    </div>
                  </div>
                </div>
                <div>
                  <div class="rouned-[1px] size-[5px] bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="h-[6px] w-1/4 rounded-[1px] bg-neutral-700/60">
                </div>
                <div class="mt-2 flex w-full justify-between gap-1">
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                </div>
              </div>
            </div>
            <div class="h-[12px] w-[80px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] rounded-sm border-[1px] border-neutral-400 bg-neutral-400/10 dark:border-neutral-800 dark:bg-neutral-800/10">
              <div class="flex w-[10px] flex-col items-center justify-between border-r-[1px] border-neutral-400/50 bg-neutral-400/25 px-[1.6px] py-[3px] dark:border-neutral-700/50 dark:bg-neutral-700/25">
                <div class="flex flex-col items-center justify-center">
                  <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                  </div>
                  <div class="mt-1.5 flex flex-col items-center justify-center gap-1">
                    <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                    </div>
                    <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                    </div>
                  </div>
                </div>
                <div class="flex items-center justify-center">
                  <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="h-[6px] w-1/4 rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                </div>
                <div class="mt-1.5 flex items-center justify-between">
                  <div class="flex items-center justify-center gap-1">
                    <div class="h-[6px] w-[25px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                    <div class="h-[6px] w-[12px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                    <div class="h-[6px] w-[6px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                  </div>
                  <div class="flex items-center justify-center gap-1">
                    <div class="h-[6px] w-[20px] rounded-[1px] bg-neutral-900/60 dark:bg-neutral-500/60">
                    </div>
                  </div>
                </div>
                <div class="mt-2 flex w-full flex-col gap-1.5">
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                </div>
              </div>
            </div>
            <div class="h-[12px] w-[60px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] rounded-sm border-[1px] border-neutral-400 bg-neutral-400/10 dark:border-neutral-800 dark:bg-neutral-800/10">
              <div class="flex w-1/4 flex-col justify-between border-r-[1px] border-neutral-700/50 bg-neutral-700/25 px-[3px] py-[3px]">
                <div>
                  <div class="h-[7px] w-full rounded-[2px] bg-neutral-700/50">
                  </div>
                  <div class="mt-1.5 flex items-center gap-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="h-[5px] w-2/3 rounded-[1px] bg-neutral-700/60">
                    </div>
                  </div>
                  <div class="mt-1 flex items-center gap-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="h-[5px] w-1/3 rounded-[1px] bg-neutral-700/60">
                    </div>
                  </div>
                </div>
                <div>
                  <div class="rouned-[1px] size-[5px] bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="h-[6px] w-1/4 rounded-[1px] bg-neutral-700/60">
                </div>
                <div class="mt-2 flex w-full justify-between gap-1">
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                </div>
              </div>
            </div>
            <div class="h-[12px] w-[80px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
        </div>
        <div class="flex gap-8 opacity-80">
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] rounded-sm border-[1px] border-neutral-400 bg-neutral-400/10 dark:border-neutral-800 dark:bg-neutral-800/10">
              <div class="flex w-1/4 flex-col justify-between border-r-[1px] border-neutral-700/50 bg-neutral-700/25 px-[3px] py-[3px]">
                <div>
                  <div class="h-[7px] w-full rounded-[2px] bg-neutral-700/50">
                  </div>
                  <div class="mt-1.5 flex items-center gap-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="h-[5px] w-2/3 rounded-[1px] bg-neutral-700/60">
                    </div>
                  </div>
                  <div class="mt-1 flex items-center gap-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="h-[5px] w-1/3 rounded-[1px] bg-neutral-700/60">
                    </div>
                  </div>
                </div>
                <div>
                  <div class="rouned-[1px] size-[5px] bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="h-[6px] w-1/4 rounded-[1px] bg-neutral-700/60">
                </div>
                <div class="mt-2 flex w-full justify-between gap-1">
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                </div>
              </div>
            </div>
            <div class="h-[12px] w-[80px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] items-center justify-center rounded-sm border-[1px] border-red-800 bg-red-700/10">
              <div class="flex size-8 items-center justify-center rounded-sm bg-red-500/30">
                <gui-triangle-alert-icon
                  classname="text-red-500"
                  size="16"
                >
                </gui-triangle-alert-icon>
              </div>
            </div>
            <div class="h-[12px] w-[100px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] rounded-sm border-[1px] border-neutral-400 bg-neutral-400/10 dark:border-neutral-800 dark:bg-neutral-800/10">
              <div class="flex w-[10px] flex-col items-center justify-between border-r-[1px] border-neutral-400/50 bg-neutral-400/25 px-[1.6px] py-[3px] dark:border-neutral-700/50 dark:bg-neutral-700/25">
                <div class="flex flex-col items-center justify-center">
                  <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                  </div>
                  <div class="mt-1.5 flex flex-col items-center justify-center gap-1">
                    <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                    </div>
                    <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                    </div>
                  </div>
                </div>
                <div class="flex items-center justify-center">
                  <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="h-[6px] w-1/4 rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                </div>
                <div class="mt-1.5 flex items-center justify-between">
                  <div class="flex items-center justify-center gap-1">
                    <div class="h-[6px] w-[25px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                    <div class="h-[6px] w-[12px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                    <div class="h-[6px] w-[6px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                  </div>
                  <div class="flex items-center justify-center gap-1">
                    <div class="h-[6px] w-[20px] rounded-[1px] bg-neutral-900/60 dark:bg-neutral-500/60">
                    </div>
                  </div>
                </div>
                <div class="mt-2 flex w-full flex-col gap-1.5">
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                </div>
              </div>
            </div>
            <div class="h-[12px] w-[60px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
        </div>
        <div class="flex gap-8 opacity-50">
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] rounded-sm border-[1px] border-neutral-400 bg-neutral-400/10 dark:border-neutral-800 dark:bg-neutral-800/10">
              <div class="flex w-[10px] flex-col items-center justify-between border-r-[1px] border-neutral-400/50 bg-neutral-400/25 px-[1.6px] py-[3px] dark:border-neutral-700/50 dark:bg-neutral-700/25">
                <div class="flex flex-col items-center justify-center">
                  <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                  </div>
                  <div class="mt-1.5 flex flex-col items-center justify-center gap-1">
                    <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                    </div>
                    <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                    </div>
                  </div>
                </div>
                <div class="flex items-center justify-center">
                  <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="h-[6px] w-1/4 rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                </div>
                <div class="mt-1.5 flex items-center justify-between">
                  <div class="flex items-center justify-center gap-1">
                    <div class="h-[6px] w-[25px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                    <div class="h-[6px] w-[12px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                    <div class="h-[6px] w-[6px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                  </div>
                  <div class="flex items-center justify-center gap-1">
                    <div class="h-[6px] w-[20px] rounded-[1px] bg-neutral-900/60 dark:bg-neutral-500/60">
                    </div>
                  </div>
                </div>
                <div class="mt-2 flex w-full flex-col gap-1.5">
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                </div>
              </div>
            </div>
            <div class="h-[12px] w-[60px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] rounded-sm border-[1px] border-neutral-400 bg-neutral-400/10 dark:border-neutral-800 dark:bg-neutral-800/10">
              <div class="flex w-1/4 flex-col justify-between border-r-[1px] border-neutral-700/50 bg-neutral-700/25 px-[3px] py-[3px]">
                <div>
                  <div class="h-[7px] w-full rounded-[2px] bg-neutral-700/50">
                  </div>
                  <div class="mt-1.5 flex items-center gap-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="h-[5px] w-2/3 rounded-[1px] bg-neutral-700/60">
                    </div>
                  </div>
                  <div class="mt-1 flex items-center gap-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="h-[5px] w-1/3 rounded-[1px] bg-neutral-700/60">
                    </div>
                  </div>
                </div>
                <div>
                  <div class="rouned-[1px] size-[5px] bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="h-[6px] w-1/4 rounded-[1px] bg-neutral-700/60">
                </div>
                <div class="mt-2 flex w-full justify-between gap-1">
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                </div>
              </div>
            </div>
            <div class="h-[12px] w-[80px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] rounded-sm border-[1px] border-neutral-400 bg-neutral-400/10 dark:border-neutral-800 dark:bg-neutral-800/10">
              <div class="flex w-[10px] flex-col items-center justify-between border-r-[1px] border-neutral-400/50 bg-neutral-400/25 px-[1.6px] py-[3px] dark:border-neutral-700/50 dark:bg-neutral-700/25">
                <div class="flex flex-col items-center justify-center">
                  <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                  </div>
                  <div class="mt-1.5 flex flex-col items-center justify-center gap-1">
                    <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                    </div>
                    <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                    </div>
                  </div>
                </div>
                <div class="flex items-center justify-center">
                  <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="h-[6px] w-1/4 rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                </div>
                <div class="mt-1.5 flex items-center justify-between">
                  <div class="flex items-center justify-center gap-1">
                    <div class="h-[6px] w-[25px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                    <div class="h-[6px] w-[12px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                    <div class="h-[6px] w-[6px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                  </div>
                  <div class="flex items-center justify-center gap-1">
                    <div class="h-[6px] w-[20px] rounded-[1px] bg-neutral-900/60 dark:bg-neutral-500/60">
                    </div>
                  </div>
                </div>
                <div class="mt-2 flex w-full flex-col gap-1.5">
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                </div>
              </div>
            </div>
            <div class="h-[12px] w-[60px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
        </div>
      </div>
      <div class="-mt-32 flex flex-col items-center justify-center gap-1">
        <h4 class="z-[2] text-xl font-semibold">
          Something went wrong
        </h4>
        <p class="z-[2] text-center text-sm text-neutral-500">
          Failed because of...
        </p>
        <div class="z-[2] mt-3 flex gap-3">
          <gui-button variant="outline">
            Back
          </gui-button>
          <gui-button>
            <span>
              Dashboard
            </span>
            <gui-arrow-right-icon>
            </gui-arrow-right-icon>
          </gui-button>
        </div>
      </div>
      <div class="absolute -bottom-6 -left-6 -right-6 z-[1] h-[150px] bg-gradient-radial from-white to-white/0 dark:from-black dark:to-black/0">
      </div>
    </div>
  </section>
</div>

`;

exports[`render default 1`] = `

<div>
  <section class="flex min-h-[80svh] grow flex-col items-center justify-center bg-white dark:bg-black">
    <div class="relative -mt-32 flex flex-col items-center justify-center">
      <div class="relative flex flex-col gap-8">
        <div class="absolute inset-0 z-[2] bg-gradient-radial from-white/0 via-transparent to-white dark:from-black/0 dark:to-black">
        </div>
        <div class="flex gap-8 opacity-50">
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] rounded-sm border-[1px] border-neutral-400 bg-neutral-400/10 dark:border-neutral-800 dark:bg-neutral-800/10">
              <div class="flex w-1/4 flex-col justify-between border-r-[1px] border-neutral-700/50 bg-neutral-700/25 px-[3px] py-[3px]">
                <div>
                  <div class="h-[7px] w-full rounded-[2px] bg-neutral-700/50">
                  </div>
                  <div class="mt-1.5 flex items-center gap-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="h-[5px] w-2/3 rounded-[1px] bg-neutral-700/60">
                    </div>
                  </div>
                  <div class="mt-1 flex items-center gap-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="h-[5px] w-1/3 rounded-[1px] bg-neutral-700/60">
                    </div>
                  </div>
                </div>
                <div>
                  <div class="rouned-[1px] size-[5px] bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="h-[6px] w-1/4 rounded-[1px] bg-neutral-700/60">
                </div>
                <div class="mt-2 flex w-full justify-between gap-1">
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                </div>
              </div>
            </div>
            <div class="h-[12px] w-[80px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] rounded-sm border-[1px] border-neutral-400 bg-neutral-400/10 dark:border-neutral-800 dark:bg-neutral-800/10">
              <div class="flex w-[10px] flex-col items-center justify-between border-r-[1px] border-neutral-400/50 bg-neutral-400/25 px-[1.6px] py-[3px] dark:border-neutral-700/50 dark:bg-neutral-700/25">
                <div class="flex flex-col items-center justify-center">
                  <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                  </div>
                  <div class="mt-1.5 flex flex-col items-center justify-center gap-1">
                    <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                    </div>
                    <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                    </div>
                  </div>
                </div>
                <div class="flex items-center justify-center">
                  <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="h-[6px] w-1/4 rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                </div>
                <div class="mt-1.5 flex items-center justify-between">
                  <div class="flex items-center justify-center gap-1">
                    <div class="h-[6px] w-[25px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                    <div class="h-[6px] w-[12px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                    <div class="h-[6px] w-[6px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                  </div>
                  <div class="flex items-center justify-center gap-1">
                    <div class="h-[6px] w-[20px] rounded-[1px] bg-neutral-900/60 dark:bg-neutral-500/60">
                    </div>
                  </div>
                </div>
                <div class="mt-2 flex w-full flex-col gap-1.5">
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                </div>
              </div>
            </div>
            <div class="h-[12px] w-[60px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] rounded-sm border-[1px] border-neutral-400 bg-neutral-400/10 dark:border-neutral-800 dark:bg-neutral-800/10">
              <div class="flex w-1/4 flex-col justify-between border-r-[1px] border-neutral-700/50 bg-neutral-700/25 px-[3px] py-[3px]">
                <div>
                  <div class="h-[7px] w-full rounded-[2px] bg-neutral-700/50">
                  </div>
                  <div class="mt-1.5 flex items-center gap-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="h-[5px] w-2/3 rounded-[1px] bg-neutral-700/60">
                    </div>
                  </div>
                  <div class="mt-1 flex items-center gap-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="h-[5px] w-1/3 rounded-[1px] bg-neutral-700/60">
                    </div>
                  </div>
                </div>
                <div>
                  <div class="rouned-[1px] size-[5px] bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="h-[6px] w-1/4 rounded-[1px] bg-neutral-700/60">
                </div>
                <div class="mt-2 flex w-full justify-between gap-1">
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                </div>
              </div>
            </div>
            <div class="h-[12px] w-[80px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
        </div>
        <div class="flex gap-8 opacity-80">
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] rounded-sm border-[1px] border-neutral-400 bg-neutral-400/10 dark:border-neutral-800 dark:bg-neutral-800/10">
              <div class="flex w-1/4 flex-col justify-between border-r-[1px] border-neutral-700/50 bg-neutral-700/25 px-[3px] py-[3px]">
                <div>
                  <div class="h-[7px] w-full rounded-[2px] bg-neutral-700/50">
                  </div>
                  <div class="mt-1.5 flex items-center gap-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="h-[5px] w-2/3 rounded-[1px] bg-neutral-700/60">
                    </div>
                  </div>
                  <div class="mt-1 flex items-center gap-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="h-[5px] w-1/3 rounded-[1px] bg-neutral-700/60">
                    </div>
                  </div>
                </div>
                <div>
                  <div class="rouned-[1px] size-[5px] bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="h-[6px] w-1/4 rounded-[1px] bg-neutral-700/60">
                </div>
                <div class="mt-2 flex w-full justify-between gap-1">
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                </div>
              </div>
            </div>
            <div class="h-[12px] w-[80px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] items-center justify-center rounded-sm border-[1px] border-red-800 bg-red-700/10">
              <div class="flex size-8 items-center justify-center rounded-sm bg-red-500/30">
                <gui-triangle-alert-icon
                  classname="text-red-500"
                  size="16"
                >
                </gui-triangle-alert-icon>
              </div>
            </div>
            <div class="h-[12px] w-[100px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] rounded-sm border-[1px] border-neutral-400 bg-neutral-400/10 dark:border-neutral-800 dark:bg-neutral-800/10">
              <div class="flex w-[10px] flex-col items-center justify-between border-r-[1px] border-neutral-400/50 bg-neutral-400/25 px-[1.6px] py-[3px] dark:border-neutral-700/50 dark:bg-neutral-700/25">
                <div class="flex flex-col items-center justify-center">
                  <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                  </div>
                  <div class="mt-1.5 flex flex-col items-center justify-center gap-1">
                    <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                    </div>
                    <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                    </div>
                  </div>
                </div>
                <div class="flex items-center justify-center">
                  <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="h-[6px] w-1/4 rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                </div>
                <div class="mt-1.5 flex items-center justify-between">
                  <div class="flex items-center justify-center gap-1">
                    <div class="h-[6px] w-[25px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                    <div class="h-[6px] w-[12px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                    <div class="h-[6px] w-[6px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                  </div>
                  <div class="flex items-center justify-center gap-1">
                    <div class="h-[6px] w-[20px] rounded-[1px] bg-neutral-900/60 dark:bg-neutral-500/60">
                    </div>
                  </div>
                </div>
                <div class="mt-2 flex w-full flex-col gap-1.5">
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                </div>
              </div>
            </div>
            <div class="h-[12px] w-[60px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
        </div>
        <div class="flex gap-8 opacity-50">
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] rounded-sm border-[1px] border-neutral-400 bg-neutral-400/10 dark:border-neutral-800 dark:bg-neutral-800/10">
              <div class="flex w-[10px] flex-col items-center justify-between border-r-[1px] border-neutral-400/50 bg-neutral-400/25 px-[1.6px] py-[3px] dark:border-neutral-700/50 dark:bg-neutral-700/25">
                <div class="flex flex-col items-center justify-center">
                  <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                  </div>
                  <div class="mt-1.5 flex flex-col items-center justify-center gap-1">
                    <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                    </div>
                    <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                    </div>
                  </div>
                </div>
                <div class="flex items-center justify-center">
                  <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="h-[6px] w-1/4 rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                </div>
                <div class="mt-1.5 flex items-center justify-between">
                  <div class="flex items-center justify-center gap-1">
                    <div class="h-[6px] w-[25px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                    <div class="h-[6px] w-[12px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                    <div class="h-[6px] w-[6px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                  </div>
                  <div class="flex items-center justify-center gap-1">
                    <div class="h-[6px] w-[20px] rounded-[1px] bg-neutral-900/60 dark:bg-neutral-500/60">
                    </div>
                  </div>
                </div>
                <div class="mt-2 flex w-full flex-col gap-1.5">
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                </div>
              </div>
            </div>
            <div class="h-[12px] w-[60px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] rounded-sm border-[1px] border-neutral-400 bg-neutral-400/10 dark:border-neutral-800 dark:bg-neutral-800/10">
              <div class="flex w-1/4 flex-col justify-between border-r-[1px] border-neutral-700/50 bg-neutral-700/25 px-[3px] py-[3px]">
                <div>
                  <div class="h-[7px] w-full rounded-[2px] bg-neutral-700/50">
                  </div>
                  <div class="mt-1.5 flex items-center gap-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="h-[5px] w-2/3 rounded-[1px] bg-neutral-700/60">
                    </div>
                  </div>
                  <div class="mt-1 flex items-center gap-1">
                    <div class="size-[5px] rounded-[1px] bg-neutral-700/60">
                    </div>
                    <div class="h-[5px] w-1/3 rounded-[1px] bg-neutral-700/60">
                    </div>
                  </div>
                </div>
                <div>
                  <div class="rouned-[1px] size-[5px] bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="h-[6px] w-1/4 rounded-[1px] bg-neutral-700/60">
                </div>
                <div class="mt-2 flex w-full justify-between gap-1">
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                  <div class="h-[24px] w-1/3 border-[1px] border-neutral-400/90 bg-neutral-400/60 dark:border-neutral-800/90 dark:bg-neutral-800/60">
                  </div>
                </div>
              </div>
            </div>
            <div class="h-[12px] w-[80px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
          <div class="relative flex flex-col gap-2">
            <div class="flex h-[100px] w-[175px] rounded-sm border-[1px] border-neutral-400 bg-neutral-400/10 dark:border-neutral-800 dark:bg-neutral-800/10">
              <div class="flex w-[10px] flex-col items-center justify-between border-r-[1px] border-neutral-400/50 bg-neutral-400/25 px-[1.6px] py-[3px] dark:border-neutral-700/50 dark:bg-neutral-700/25">
                <div class="flex flex-col items-center justify-center">
                  <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                  </div>
                  <div class="mt-1.5 flex flex-col items-center justify-center gap-1">
                    <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                    </div>
                    <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                    </div>
                  </div>
                </div>
                <div class="flex items-center justify-center">
                  <div class="size-[6px] rounded-[1px] bg-neutral-400 dark:bg-neutral-700/60">
                  </div>
                </div>
              </div>
              <div class="flex w-full flex-col px-[6px] py-[3px]">
                <div class="h-[6px] w-1/4 rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                </div>
                <div class="mt-1.5 flex items-center justify-between">
                  <div class="flex items-center justify-center gap-1">
                    <div class="h-[6px] w-[25px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                    <div class="h-[6px] w-[12px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                    <div class="h-[6px] w-[6px] rounded-[1px] bg-neutral-400/60 dark:bg-neutral-700/60">
                    </div>
                  </div>
                  <div class="flex items-center justify-center gap-1">
                    <div class="h-[6px] w-[20px] rounded-[1px] bg-neutral-900/60 dark:bg-neutral-500/60">
                    </div>
                  </div>
                </div>
                <div class="mt-2 flex w-full flex-col gap-1.5">
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                  <div class="h-[8px] w-full rounded-[1px] border-[0.75px] border-neutral-400/70 bg-neutral-400/20 dark:border-neutral-700/70 dark:bg-neutral-700/20">
                  </div>
                </div>
              </div>
            </div>
            <div class="h-[12px] w-[60px] rounded-[2px] bg-neutral-200 dark:bg-neutral-900/80">
            </div>
          </div>
        </div>
      </div>
      <div class="-mt-32 flex flex-col items-center justify-center gap-1">
        <h4 class="z-[2] text-xl font-semibold">
          Something went wrong
        </h4>
        <p class="z-[2] text-center text-sm text-neutral-500">
          An unexpected error occured.
        </p>
        <div class="z-[2] mt-3 flex gap-3">
          <gui-button variant="outline">
            Back
          </gui-button>
          <gui-button>
            <span>
              Dashboard
            </span>
            <gui-arrow-right-icon>
            </gui-arrow-right-icon>
          </gui-button>
        </div>
      </div>
      <div class="absolute -bottom-6 -left-6 -right-6 z-[1] h-[150px] bg-gradient-radial from-white to-white/0 dark:from-black dark:to-black/0">
      </div>
    </div>
  </section>
</div>

`;
